AutoComplete Airports API completed. Swap airports button created. Clear button for arrivalDate.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndroidProject</string>
+    <string name="app_name">Fly Now</string>
 
 
     <string-array name="ticket_plan">
