Nearby Airports feature added. GPS lat and lng getting updated in the MainActivity. Internet Access check added before leave MainActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="notAvailableTickets">Δεν υπάρχουν διαθέσιμα εισιτήρια.</string>
     <string name="multiAirlines">ΣΥΝΔΥΑΣΜΟΣ ΕΤΑΙΡΙΩΝ</string>
     <string name="loadingYourData">Φορτώνουμε τα δεδομένα που ζητήσατε.</string>
+    <string name="nearAirports">Αεροδρόμια κοντά σας</string>
 </resources>
