Price added on clicktobuy button (Detail Activity). Detail Activity durations changed. Format now is D H M Fixed a little bug on datepickers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,8 +39,14 @@
     <string name="departTitle">Πρόγραμμα Αναχώρησης</string>
     <string name="acceotGPSPermission">Για την δική σας καλύτερη εξυπηρέτηση δεχτείτε την άδεια τοποθεσίας.</string>
     <string name="totalDuration">Συνολική διάρκεια :</string>
-    <string name="minutes">λεπτά</string>
     <string name="standbyDuration">"Διάρκεια Αναμονής : "</string>
     <string name="thanksforpurchase">Ευχαριστούμε για την αγορά σας.</string>
     <string name="chooseDepartDateFirst">Παρακαλώ επιλέξτε πρώτα ημερομηνία αναχώρησης.</string>
+    <string name="clicktobuyString">Κάνε κράτηση : </string>
+    <string name="day">" ημέρα "</string>
+    <string name="days">" ημέρες "</string>
+    <string name="hour">" ώρα "</string>
+    <string name="hours">" ώρες "</string>
+    <string name="minute">" λεπτό "</string>
+    <string name="minutes">" λεπτά "</string>
 </resources>
